--- a/admin-notification.html
+++ b/admin-notification.html
@@ -21,7 +21,7 @@
       <div class="sidebar-header d-flex align-items-center mb-4">
         <i class="bi bi-thermometer-half fs-3 me-2"></i>
         <div>
-          <h5 class="mb-0 fw-semibold">IoT Monitor</h5>
+          <h5 class="mb-0 fw-semibold">HumiTrack</h5>
           <small class="text-muted">Administrator</small>
         </div>
       </div>
