--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 
       <div class="alert alert-secondary border-0 text-sm mb-4" role="alert">
         <h6 class="fw-bold mb-1">
-          <i class="bi bi-info-circle me-1"></i> Demo Credentials
+          <i class="bi bi-info-circle me-1"></i> Demo Account
         </h6>
         <div class="d-flex justify-content-between text-muted small">
           <span><strong>Admin:</strong> admin | admin</span>
