--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
                 <small class="text-muted"
                   >Monitoring suhu ruangan dalam 24 jam terakhir</small
                 >
-                <div div id="chart-suhu" class="mt-3"></div>
+                <div class="mt-3" style="height: 250px; width: 100%">
+                  <canvas id="chart-suhu"></canvas>
+                </div>
               </div>
             </div>
           </div>
@@ -260,7 +262,9 @@
                 <small class="text-muted"
                   >Monitoring kelembaban ruangan dalam 24 jam terakhir</small
                 >
-                <div div id="chart-kelembaban" class="mt-3"></div>
+                <div class="mt-3" style="height: 250px; width: 100%">
+                  <canvas id="chart-kelembaban"></canvas>
+                </div>
               </div>
             </div>
           </div>
@@ -268,7 +272,7 @@
       </div>
     </div>
     <div class="sidebar-overlay" id="sidebarOverlay"></div>
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
